--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,9 @@
             android:id="@+id/whipswitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/whip"
+            android:checked="true"
             android:onClick="switchClick"
+            android:text="@string/whip"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
